name:               map-cutter
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20
license:            MIT
copyright:          Copyright © 2015 Miëtek Bak
author:             Miëtek Bak <hello@mietek.io>
maintainer:         Miëtek Bak <hello@mietek.io>
stability:          experimental
homepage:           https://github.com/mietek/map-cutter
license-file:       LICENSE.md
extra-source-files: README.md
synopsis:           TODO
description:        TODO

executable map-cutter
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      aeson,
                      aeson-pretty,
                      bytestring,
                      bytestring-lexing,
                      containers,
                      directory,
                      filepath,
                      optparse-applicative
